<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.localapp.ui.activities.SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <LinearLayout
                android:orientation="vertical"
                android:background="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:fontFamily="@string/font_family_regular"
                    android:padding="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_sign_up"
                    android:textSize="25sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_gravity="center"/>

                <TextView
                    android:fontFamily="@string/font_family_regular"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_sign_up_message"
                    android:textSize="17sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:layout_gravity="center"/>

                <com.localapp.ui.custom_views.CircularNetworkImageView
                    android:layout_margin="4dp"
                    android:padding="4dp"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/ic_user"
                    android:layout_gravity="center"
                    app:siBorderWidth="0dp"
                    app:siBorderColor="@color/white"
                    android:id="@+id/image_pic" />

                <Button
                    android:fontFamily="@string/font_family_regular"
                    android:id="@+id/upload_btn"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:layout_width="160dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:text="@string/btn_upload_pic"
                    android:textColor="#ffffff"
                    android:textAllCaps="false"
                    android:background="@drawable/signup_upload_pic_btn_shap" />


            </LinearLayout>

            <LinearLayout
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--  Name Label -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">
                    <EditText
                        android:fontFamily="@string/font_family_regular"
                        android:id="@+id/input_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:inputType="textPersonName"
                        android:drawableStart="@drawable/ic_name"
                        android:hint="@string/hint_name" />
                </android.support.design.widget.TextInputLayout>

                <!--  Phone Number Label -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                    <EditText android:id="@+id/input_phoneNumber"
                        android:fontFamily="@string/font_family_regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/ic_phone"
                        android:drawableEnd="@drawable/ic_password_visible"
                        android:hint="@string/hint_phone_number" />
                </android.support.design.widget.TextInputLayout>


                <!--  Email Label -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">
                    <EditText android:id="@+id/input_email"
                        android:fontFamily="@string/font_family_regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:inputType="textEmailAddress"
                        android:drawableStart="@drawable/ic_email"
                        android:hint="@string/hint_email" />
                </android.support.design.widget.TextInputLayout>


                <!--  Profession Label -->
                <!--  Profession Label -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">
                    <EditText android:id="@+id/input_profession"
                        android:fontFamily="@string/font_family_regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:editable="false"
                        android:drawableStart="@drawable/ic_profession"
                        android:drawableEnd="@android:drawable/arrow_down_float"
                        android:hint="@string/hint_select_profession" />
                </android.support.design.widget.TextInputLayout>

                <!--  Password Label -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">
                    <EditText
                        android:fontFamily="@string/font_family_regular"
                        android:id="@+id/input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/ic_lock"
                        android:hint="@string/hint_password" />
                </android.support.design.widget.TextInputLayout>


                <!--  Password Label -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">
                    <EditText
                        android:fontFamily="@string/font_family_regular"
                        android:id="@+id/input_password_c"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:drawableStart="@drawable/ic_lock"
                        android:drawablePadding="10dp"
                        android:hint="@string/hint_confirm_password" />
                </android.support.design.widget.TextInputLayout>


                <!--  Brief Label -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">
                    <EditText
                        android:fontFamily="@string/font_family_regular"
                        android:id="@+id/input_brief_intro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:maxLines="2"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/ic_brief_intro"
                        android:hint="@string/hint_brief_intro" />
                </android.support.design.widget.TextInputLayout>
                <TextView
                    android:fontFamily="@string/font_family_regular"
                    android:layout_gravity="end"
                    android:textColor="@color/colorAccent"
                    android:layout_marginBottom="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_maximum_10_words"/>


                <!--  Details Label -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:fontFamily="@string/font_family_regular"
                        android:id="@+id/input_details_des"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/ic_detail_description"
                        android:hint="@string/hint_detail_description" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:fontFamily="@string/font_family_regular"
                    android:layout_gravity="end"
                    android:textColor="@color/colorAccent"
                    android:layout_marginBottom="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_optional"/>



                <!-- <Button
                     android:layout_margin="30dp"
                     android:textColor="#FFFFFF"
                     android:text="Fill With Facebook"
                     android:textAllCaps="false"
                     android:background="@drawable/fb_btn_style"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />-->
                <com.facebook.login.widget.LoginButton
                    xmlns:facebook="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/fb_login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:visibility="gone"
                    android:layout_marginBottom="30dp" />



                <!--  fill with facebook btn  -->
                <Button
                    android:visibility="gone"
                    android:id="@+id/fb_fill_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textAllCaps="false"
                    android:drawablePadding="5dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/fb_btn_shap"
                    android:drawableStart="@drawable/com_facebook_button_icon_white"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/btn_use_fb_info"
                    android:textColor="@color/white"
                    android:textStyle="bold" />


            </LinearLayout>


            <LinearLayout
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_already_have_an_account"/>

                <TextView
                    android:layout_marginStart="2dp"
                    android:textColor="@color/colorAccent"
                    android:id="@+id/sign_in_text"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_sign_in"/>
            </LinearLayout>

            <Button
                android:id="@+id/_signUp"
                android:layout_gravity="bottom"
                android:text="@string/btn_sign_up"
                android:textColor="@color/white"
                android:background="@color/colorAccent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />



        </LinearLayout>
    </ScrollView>

</RelativeLayout>
