<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    android:elevation="5dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_margin="8dp"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_permission_denied"
                android:layout_gravity="start"
                android:textColor="#000000"
                android:textStyle="bold"/>

            <TextView
                android:layout_margin="8dp"
                android:textSize="14sp"
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_permission_denied_message"/>

            <LinearLayout
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_marginEnd="4dp"
                    android:id="@+id/imageView_close1"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/cirule" />

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_marginStart="4dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_margin="2dp"
                        android:textStyle="bold"
                        android:textColor="#000000"
                        android:textSize="14sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_please_say_yes"/>

                    <TextView
                        android:layout_margin="2dp"
                        android:textSize="12sp"
                        android:textColor="#000000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_click_button"/>

                </LinearLayout>

            </LinearLayout>

            <!---add your views here-->
        </LinearLayout>

        <ImageView
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:id="@+id/imageView_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|right"
            android:clickable="true"
            android:src="@drawable/ic_cross" />
    </FrameLayout>

    <Button
        android:id="@+id/permission_button"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/btn_yes"
        android:background="@android:color/holo_red_dark"/>

</LinearLayout>