<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background_1"
    tools:context="com.localapp.ui.activities.LoginActivity">

    <LinearLayout
        android:id="@+id/login_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="32dp">


        <ImageView
            android:src="@mipmap/ic_localapp"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:fontFamily="@string/font_family_regular"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textColor="#2196f3"/>

        <!-- Email Label -->
            <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
                android:theme="@style/TextLabel"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_email"
                android:fontFamily="@string/font_family_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHighlight="@color/colorAccent"
                android:textColor="@color/white"
                android:drawablePadding="10dp"
                android:textColorHint="@color/white"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/ic_email"
                android:hint="@string/hint_email"
                />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:theme="@style/TextLabel"
            android:layout_marginBottom="8dp">
            <EditText
                android:fontFamily="@string/font_family_regular"
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:imeActionId="@+id/login"
                android:imeActionLabel="Login"
                android:inputType="textPassword"
                android:maxLines="1"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_lock"
                android:hint="@string/hint_password" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:fontFamily="@string/font_family_regular"
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:textAllCaps="false"
            android:background="@drawable/submit_button_state"
            android:layout_marginBottom="8dp"
            android:textColor="@color/white"
            android:padding="10dp"
            android:text="@string/btn_login"
            android:textSize="14sp" />



        <TextView android:id="@+id/link_forgotPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@string/font_family_regular"
            android:layout_marginTop="8dp"
            android:text="@string/label_forgot_password"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="12sp"/>

        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">
            <View
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1.75"
                android:layout_height="0.5dp"
                android:background="@color/white"/>
            <TextView
                android:fontFamily="@string/font_family_regular"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:text="@string/label_or"/>
            <View
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1.75"
                android:layout_height="0.5dp"
                android:background="@color/white"/>
        </LinearLayout>


        <com.facebook.login.widget.LoginButton
            android:id="@+id/fb_login_button"
            android:fontFamily="@string/font_family_regular"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="8dp"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:layout_width="match_parent"
            android:layout_height="80dp" />

        <!--android:background="#FAFAFA"
        android:textColor="@color/com_facebook_messenger_blue"-->

        <Button
            android:fontFamily="@string/font_family_regular"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="12dp"
            android:id="@+id/link_signup"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textAllCaps="false"
            android:padding="10dp"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@drawable/submit_button_state"
            android:text="@string/btn_sign_up_email"
            android:textSize="14sp" />



        <!--facebook:com_facebook_login_text="Log in with Facebook"-->


    </LinearLayout>





</RelativeLayout>
